Fix all Eclipse warnings under cesecore-common/org.cesecore.internal;org.cesecore.jndi;org.cesecore.keybind.**